4º Ano/2 Semestre/C/test/aglParser.java
// Generated from agl.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class aglParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, ID=24, Number=25, 
		Integer=26, String=27, WS=28, COMMENT=29, MULTICOMMENT=30, ERROR=31;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_assign = 2, RULE_instantiation = 3, 
		RULE_dataType = 4, RULE_action = 5, RULE_figureDef = 6, RULE_viewDef = 7, 
		RULE_loopDef = 8, RULE_dataPoint = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "assign", "instantiation", "dataType", "action", "figureDef", 
			"viewDef", "loopDef", "dataPoint"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "':'", "'-'", "'+'", "'('", "','", "')'", "'close'", 
			"'refresh'", "'after'", "'ms'", "'s'", "'print'", "'wait mouse click'", 
			"'at'", "'with'", "'{'", "'}'", "'for'", "'in'", "'..'", "'do'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID", "Number", "Integer", "String", "WS", "COMMENT", "MULTICOMMENT", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "agl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public aglParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(aglParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17876480L) != 0)) {
				{
				{
				setState(20);
				stat();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatInstantiationContext extends StatContext {
		public InstantiationContext instantiation() {
			return getRuleContext(InstantiationContext.class,0);
		}
		public StatInstantiationContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatInstantiation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatInstantiation(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatViewContext extends StatContext {
		public ViewDefContext viewDef() {
			return getRuleContext(ViewDefContext.class,0);
		}
		public StatViewContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatView(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatView(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatActionContext extends StatContext {
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public StatActionContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatAction(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatFigureContext extends StatContext {
		public FigureDefContext figureDef() {
			return getRuleContext(FigureDefContext.class,0);
		}
		public StatFigureContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatFigure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatFigure(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatAssignContext extends StatContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public StatAssignContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatAssign(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatLoopContext extends StatContext {
		public LoopDefContext loopDef() {
			return getRuleContext(LoopDefContext.class,0);
		}
		public StatLoopContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterStatLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitStatLoop(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new StatInstantiationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				instantiation();
				setState(29);
				match(T__0);
				}
				break;
			case 2:
				_localctx = new StatAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				assign();
				setState(32);
				match(T__0);
				}
				break;
			case 3:
				_localctx = new StatActionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				action();
				setState(35);
				match(T__0);
				}
				break;
			case 4:
				_localctx = new StatViewContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(37);
				viewDef();
				}
				break;
			case 5:
				_localctx = new StatFigureContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(38);
				figureDef();
				}
				break;
			case 6:
				_localctx = new StatLoopContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(39);
				loopDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	 
		public AssignContext() { }
		public void copyFrom(AssignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignExistingContext extends AssignContext {
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public AssignExistingContext(AssignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterAssignExisting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitAssignExisting(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignInstantiationContext extends AssignContext {
		public InstantiationContext instantiation() {
			return getRuleContext(InstantiationContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public AssignInstantiationContext(AssignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterAssignInstantiation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitAssignInstantiation(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assign);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new AssignExistingContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(ID);
				setState(43);
				match(T__1);
				setState(44);
				dataType();
				}
				break;
			case 2:
				_localctx = new AssignInstantiationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				instantiation();
				setState(46);
				match(T__1);
				setState(47);
				dataType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstantiationContext extends ParserRuleContext {
		public InstantiationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instantiation; }
	 
		public InstantiationContext() { }
		public void copyFrom(InstantiationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstantiationDefContext extends InstantiationContext {
		public List<TerminalNode> ID() { return getTokens(aglParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(aglParser.ID, i);
		}
		public InstantiationDefContext(InstantiationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterInstantiationDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitInstantiationDef(this);
		}
	}

	public final InstantiationContext instantiation() throws RecognitionException {
		InstantiationContext _localctx = new InstantiationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instantiation);
		try {
			_localctx = new InstantiationDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(ID);
			setState(52);
			match(T__2);
			setState(53);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeContext extends ParserRuleContext {
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
	 
		public DataTypeContext() { }
		public void copyFrom(DataTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeUnaryContext extends DataTypeContext {
		public Token op;
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public DataTypeUnaryContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeUnary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeUnary(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeStringContext extends DataTypeContext {
		public TerminalNode String() { return getToken(aglParser.String, 0); }
		public DataTypeStringContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeString(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeActionContext extends DataTypeContext {
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public DataTypeActionContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeAction(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypePointContext extends DataTypeContext {
		public List<DataTypeContext> dataType() {
			return getRuleContexts(DataTypeContext.class);
		}
		public DataTypeContext dataType(int i) {
			return getRuleContext(DataTypeContext.class,i);
		}
		public DataTypePointContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypePoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypePoint(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeRealNumberContext extends DataTypeContext {
		public TerminalNode Number() { return getToken(aglParser.Number, 0); }
		public DataTypeRealNumberContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeRealNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeRealNumber(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeIDContext extends DataTypeContext {
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public DataTypeIDContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeID(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeIntegerContext extends DataTypeContext {
		public TerminalNode Integer() { return getToken(aglParser.Integer, 0); }
		public DataTypeIntegerContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeInteger(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeVectorContext extends DataTypeContext {
		public List<TerminalNode> Number() { return getTokens(aglParser.Number); }
		public TerminalNode Number(int i) {
			return getToken(aglParser.Number, i);
		}
		public DataTypeVectorContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterDataTypeVector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitDataTypeVector(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dataType);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new DataTypeUnaryContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				((DataTypeUnaryContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
					((DataTypeUnaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(56);
				dataType();
				}
				break;
			case 2:
				_localctx = new DataTypePointContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(T__5);
				setState(58);
				dataType();
				setState(59);
				match(T__6);
				setState(60);
				dataType();
				setState(61);
				match(T__7);
				}
				break;
			case 3:
				_localctx = new DataTypeVectorContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				match(T__5);
				setState(64);
				match(Number);
				setState(65);
				_la = _input.LA(1);
				if ( !(_la==T__2 || _la==T__6) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(66);
				match(Number);
				setState(67);
				match(T__7);
				}
				break;
			case 4:
				_localctx = new DataTypeRealNumberContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				match(Number);
				}
				break;
			case 5:
				_localctx = new DataTypeStringContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				match(String);
				}
				break;
			case 6:
				_localctx = new DataTypeActionContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				action();
				}
				break;
			case 7:
				_localctx = new DataTypeIDContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(71);
				match(ID);
				}
				break;
			case 8:
				_localctx = new DataTypeIntegerContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(72);
				match(Integer);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionContext extends ParserRuleContext {
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
	 
		public ActionContext() { }
		public void copyFrom(ActionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ActionRefreshContext extends ActionContext {
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public TerminalNode Integer() { return getToken(aglParser.Integer, 0); }
		public ActionRefreshContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterActionRefresh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitActionRefresh(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ActionCloseContext extends ActionContext {
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public ActionCloseContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterActionClose(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitActionClose(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ActionPrintContext extends ActionContext {
		public List<TerminalNode> String() { return getTokens(aglParser.String); }
		public TerminalNode String(int i) {
			return getToken(aglParser.String, i);
		}
		public List<TerminalNode> ID() { return getTokens(aglParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(aglParser.ID, i);
		}
		public ActionPrintContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterActionPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitActionPrint(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ActionMouseContext extends ActionContext {
		public ActionMouseContext(ActionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterActionMouse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitActionMouse(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_action);
		int _la;
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				_localctx = new ActionCloseContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(T__8);
				setState(76);
				match(ID);
				}
				break;
			case T__9:
				_localctx = new ActionRefreshContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(T__9);
				setState(78);
				match(ID);
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__10) {
					{
					setState(79);
					match(T__10);
					setState(80);
					match(Integer);
					setState(81);
					_la = _input.LA(1);
					if ( !(_la==T__11 || _la==T__12) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				break;
			case T__13:
				_localctx = new ActionPrintContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(T__13);
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(85);
					_la = _input.LA(1);
					if ( !(_la==ID || _la==String) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(88); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID || _la==String );
				}
				break;
			case T__14:
				_localctx = new ActionMouseContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				match(T__14);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FigureDefContext extends ParserRuleContext {
		public FigureDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_figureDef; }
	 
		public FigureDefContext() { }
		public void copyFrom(FigureDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FigureDefinitionContext extends FigureDefContext {
		public DataPointContext dataPoint() {
			return getRuleContext(DataPointContext.class,0);
		}
		public TerminalNode ID() { return getToken(aglParser.ID, 0); }
		public InstantiationContext instantiation() {
			return getRuleContext(InstantiationContext.class,0);
		}
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public FigureDefinitionContext(FigureDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).enterFigureDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aglListener ) ((aglListener)listener).exitFigureDefinition(this);
		}
	}

	public final FigureDefContext figureDef() throws RecognitionException {
		FigureDefContext _localctx = new FigureDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_figureDef);
		int _la;
		try {
			_localctx = new FigureDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(93);
				match(ID);
				}
				break;
			case 2:
				{
				setState(94);
				instantiation();
				}
				break;
			}
			setState(97);
			match(T__15);
			setState(98);
			dataPoint();
			setState(99);
			match(T__16);
			setState(100);
			match(T__17);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(101);
				assign();
				setState(102);
				match(T__0);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(T__18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
